agregado archivo y modificado index

--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <script src="../js/"></script>
     <title>Git - GitHub</title>
   </head>
   <body>
     <main>
-      <header></header>
+      <header>
+        <h1>Julian Andres</h1>
+        <p>Hola bienvenidos a mi biografia, les indicare algunas cosas de mi</p>
+        <img src="../image/que-son-paradigmas-programacion.jpg" alt="Programacion" />
+      </header>
       <section></section>
     </main>
   </body>
