--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,8 @@
         <h1>Julian Andres</h1>
         <p>Hola bienvenidos a mi biografia, les indicare algunas cosas de mi</p>
         <img src="../image/que-son-paradigmas-programacion.jpg" alt="Programacion" />
+        <h2>federico estuvo aqui</h2>
+        <img src="../image/programas-ordenador.jpg" alt="juegos" class="prueba" />
       </header>
       <section></section>
     </main>
